<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedGame">


    <ImageView
        android:id="@+id/bigGameIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/developerDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/developersDescription"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toBottomOf="@+id/nameDescriptionTextView" />

    <TextView
        android:id="@+id/nameDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/nameDescription"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/mainGameName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameDescriptionTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameDeveloperTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainGameStudio"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/developerDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameNameTextView" />

    <TextView
        android:id="@+id/ratingDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ratingDescription"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toBottomOf="@+id/developerDescriptionTextView" />

    <TextView
        android:id="@+id/gameRatingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainGameRating"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratingDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameDeveloperTextView" />

    <TextView
        android:id="@+id/originalPriceDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/originalPriceDescription"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toBottomOf="@+id/ratingDescriptionTextView" />

    <TextView
        android:id="@+id/gameOriginalPriceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainGameOriginalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/originalPriceDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameRatingTextView" />

    <TextView
        android:id="@+id/saleDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/saleDescription"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toBottomOf="@+id/originalPriceDescriptionTextView" />

    <TextView
        android:id="@+id/gameSaleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainGameSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saleDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/gameOriginalPriceTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:text="@string/saveButtonText"
        android:textColor="@color/colorClickableText"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bigGameIcon"
        app:layout_constraintTop_toBottomOf="@+id/gameSaleTextView" />
</android.support.constraint.ConstraintLayout>